--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ComGenR
 Type: Package
-Title: Functions for COMmunity GENetics analyses.
+Title: Functions for COMmunity GENetics analyses in R
 Version: 1.0
 Date: 2014-01-06
 Author: Matthew K. Lau
 Maintainer: Matthew K. Lau <mkl48@nau.edu>
 Description: This package provides functions for conducting community
-genetics analyses, including: 1) Composition, 2) Heritability and 3)
-Interaction Networks. 
+genetics analyses, including: Composition, Heritability and Interaction Networks. 
+Depends: vegan, ecodist, sna, bipartite, igraph
 License: GPL3
