--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(mean.g)
 export(mgp)
 export(min.net)
 export(null.prune)
+export(nullCom)
 export(pair.permanova)
 export(rel)
 export(rmTrees)
