Adds UTF-8 encoding

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ genetics analyses, including: Composition, Heritability and Interaction Networks
 Depends: vegan, ecodist, sna, bipartite, pbapply
 License: GPL3
 RoxygenNote: 6.1.1
+Encoding: UTF-8
